// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`presets merge > extend case 0 1`] = `
{
  "xxx": {
    "base": {
      "css": ".xxx {
  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
  color: rgb(59 130 246 / var(--tw-text-opacity)) !important;
  border-width: var(--ice-ee-bw);
  --tw-bg-opacity: 1;
  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
  --tw-text-opacity: 1 !important;
  color: rgb(14 165 233 / var(--tw-text-opacity)) !important;
  font-size: 12px
}",
      "cssInJs": {
        ".xxx": {
          "--tw-bg-opacity": "1",
          "--tw-text-opacity": "1 !important",
          "backgroundColor": [
            "rgb(239 68 68 / var(--tw-bg-opacity))",
            "rgb(34 197 94 / var(--tw-bg-opacity))",
          ],
          "borderWidth": "var(--ice-ee-bw)",
          "color": [
            "rgb(59 130 246 / var(--tw-text-opacity)) !important",
            "rgb(14 165 233 / var(--tw-text-opacity)) !important",
          ],
          "fontSize": "12px",
        },
      },
    },
    "styled": {
      "css": "",
      "cssInJs": {},
    },
    "utils": {
      "css": "",
      "cssInJs": {},
    },
  },
}
`;

exports[`presets merge > extend case 1 1`] = `
{
  "xxx": {
    "base": {
      "css": ".xxx {
  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
  color: rgb(59 130 246 / var(--tw-text-opacity)) !important;
  border-width: var(--ice-ee-bw);
  background-color: rgb(20 83 45 / var(--tw-bg-opacity));
  color: rgb(12 74 110 / var(--tw-text-opacity)) !important;
  font-size: 12px;
  margin: 0.25rem;
  --tw-bg-opacity: 1;
  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
  --tw-text-opacity: 1 !important;
  color: rgb(14 165 233 / var(--tw-text-opacity)) !important
}",
      "cssInJs": {
        ".xxx": {
          "--tw-bg-opacity": "1",
          "--tw-text-opacity": "1 !important",
          "backgroundColor": [
            "rgb(239 68 68 / var(--tw-bg-opacity))",
            "rgb(20 83 45 / var(--tw-bg-opacity))",
            "rgb(34 197 94 / var(--tw-bg-opacity))",
          ],
          "borderWidth": "var(--ice-ee-bw)",
          "color": [
            "rgb(59 130 246 / var(--tw-text-opacity)) !important",
            "rgb(12 74 110 / var(--tw-text-opacity)) !important",
            "rgb(14 165 233 / var(--tw-text-opacity)) !important",
          ],
          "fontSize": "12px",
          "margin": "0.25rem",
        },
      },
    },
    "styled": {
      "css": "",
      "cssInJs": {},
    },
    "utils": {
      "css": "",
      "cssInJs": {},
    },
  },
}
`;

exports[`presets merge > merge case 0 1`] = `
{
  "xxx": {
    "base": {
      "css": ".xxx {
  --tw-bg-opacity: 1;
  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
  --tw-text-opacity: 1 !important;
  color: rgb(59 130 246 / var(--tw-text-opacity)) !important;
  border-width: var(--ice-bw)
}",
      "cssInJs": {
        ".xxx": {
          "--tw-bg-opacity": "1",
          "--tw-text-opacity": "1 !important",
          "backgroundColor": "rgb(239 68 68 / var(--tw-bg-opacity))",
          "borderWidth": "var(--ice-bw)",
          "color": "rgb(59 130 246 / var(--tw-text-opacity)) !important",
        },
      },
    },
    "styled": {
      "css": "",
      "cssInJs": {},
    },
    "utils": {
      "css": ".xxx {
  --tw-bg-opacity: 1;
  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
  --tw-text-opacity: 1 !important;
  color: rgb(14 165 233 / var(--tw-text-opacity)) !important;
  border-width: var(--ice-ee-bw);
  font-size: 12px
}",
      "cssInJs": {
        ".xxx": {
          "--tw-bg-opacity": "1",
          "--tw-text-opacity": "1 !important",
          "backgroundColor": "rgb(34 197 94 / var(--tw-bg-opacity))",
          "borderWidth": "var(--ice-ee-bw)",
          "color": "rgb(14 165 233 / var(--tw-text-opacity)) !important",
          "fontSize": "12px",
        },
      },
    },
  },
}
`;

exports[`presets merge > override case 0 1`] = `
{
  "xxx": {
    "base": {
      "css": ".xxx {
  --tw-bg-opacity: 1;
  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
  --tw-text-opacity: 1 !important;
  color: rgb(59 130 246 / var(--tw-text-opacity)) !important;
  border-width: var(--ice-bw)
}",
      "cssInJs": {
        ".xxx": {
          "--tw-bg-opacity": "1",
          "--tw-text-opacity": "1 !important",
          "backgroundColor": "rgb(239 68 68 / var(--tw-bg-opacity))",
          "borderWidth": "var(--ice-bw)",
          "color": "rgb(59 130 246 / var(--tw-text-opacity)) !important",
        },
      },
    },
    "styled": {
      "css": "",
      "cssInJs": {},
    },
    "utils": {
      "css": "",
      "cssInJs": {},
    },
  },
}
`;

exports[`presets merge > override case 1 1`] = `
{
  "xxx": {
    "base": {
      "css": ".xxx {
  --tw-bg-opacity: 1;
  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
  --tw-text-opacity: 1 !important;
  color: rgb(59 130 246 / var(--tw-text-opacity)) !important;
  border-width: var(--ice-bw)
}",
      "cssInJs": {
        ".xxx": {
          "--tw-bg-opacity": "1",
          "--tw-text-opacity": "1 !important",
          "backgroundColor": "rgb(239 68 68 / var(--tw-bg-opacity))",
          "borderWidth": "var(--ice-bw)",
          "color": "rgb(59 130 246 / var(--tw-text-opacity)) !important",
        },
      },
    },
    "styled": {
      "css": "",
      "cssInJs": {},
    },
    "utils": {
      "css": "",
      "cssInJs": {},
    },
  },
}
`;
